helm/symfony-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hydra-token-retrieval
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hydra-token-retrieval
  template:
    metadata:
      labels:
        app: hydra-token-retrieval
    spec:
      containers:
        - name: hydra-token-retrieval
          image: hydra-token-retrieval:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 80
