helm/hydra-token-retrieval-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hydra-token-retrieval
spec:
  selector:
    app: hydra-token-retrieval
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
