helm/symfony-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: symfony-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: symfony.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hydra-token-retrieval
                port:
                  number: 80
